crates/php-parser/tests/snapshots/integration__halt_compiler_nested_error.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
__halt_compiler() can only be used at the outermost scope
unclosed ''}'' opened at Span { start: 16, end: 17 }
