crates/php-parser/tests/snapshots/integration__halt_compiler_with_statements_before.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "before"
            },
            "span": {
              "start": 11,
              "end": 19
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 21
      }
    },
    {
      "kind": {
        "HaltCompiler": "raw data here"
      },
      "span": {
        "start": 21,
        "end": 53
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 53
  }
}
