crates/php-parser/tests/snapshots/integration__hash_comment_terminated_by_close_tag.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "InlineHtml": "\n<span>html</span>\n"
      },
      "span": {
        "start": 18,
        "end": 37
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 43,
                  "end": 45
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 1
                },
                "span": {
                  "start": 48,
                  "end": 49
                }
              }
            }
          },
          "span": {
            "start": 43,
            "end": 49
          }
        }
      },
      "span": {
        "start": 43,
        "end": 50
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 50
  }
}
