crates/php-parser/tests/snapshots/integration__heredoc_with_complex_interpolation.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Heredoc": {
                    "label": "EOT",
                    "parts": [
                      {
                        "Literal": "Hello "
                      },
                      {
                        "Expr": {
                          "kind": {
                            "PropertyAccess": {
                              "object": {
                                "kind": {
                                  "Variable": "obj"
                                },
                                "span": {
                                  "start": 25,
                                  "end": 29
                                }
                              },
                              "property": {
                                "kind": {
                                  "Identifier": "name"
                                },
                                "span": {
                                  "start": 31,
                                  "end": 35
                                }
                              }
                            }
                          },
                          "span": {
                            "start": 25,
                            "end": 35
                          }
                        }
                      },
                      {
                        "Literal": "!\n"
                      },
                      {
                        "Expr": {
                          "kind": {
                            "ArrayAccess": {
                              "array": {
                                "kind": {
                                  "Variable": "arr"
                                },
                                "span": {
                                  "start": 38,
                                  "end": 42
                                }
                              },
                              "index": {
                                "kind": {
                                  "Int": 0
                                },
                                "span": {
                                  "start": 43,
                                  "end": 44
                                }
                              }
                            }
                          },
                          "span": {
                            "start": 38,
                            "end": 45
                          }
                        }
                      },
                      {
                        "Literal": " items"
                      }
                    ]
                  }
                },
                "span": {
                  "start": 11,
                  "end": 55
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 55
          }
        }
      },
      "span": {
        "start": 6,
        "end": 57
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 57
  }
}
